--- a/06_DOM/two.html
+++ b/06_DOM/two.html
@@ -10,7 +10,7 @@
         <div class="day">Monday</div>
         <div class="day">Tuesday</div>
         <div class="day">Wednesday</div>
-        <div class="day">Thrusday</div>
+        <div class="day">Thursday</div>
     </div>
 </body>
 <script>
@@ -20,9 +20,21 @@
     // console.log(parent.children[0].innerHTML);
 
     for(let i=0; i<parent.children.length; i++){
-        console.log(parent.children[i].innerHTML);
+        // console.log(parent.children[i].innerHTML);
     }
     parent.children[1].style.color = 'orange'
-    console.log(parent.firstElementChild);
+    // console.log(parent.firstElementChild);
+    // console.log(parent.lastElementChild);
+
+
+    //child to parent
+    const dayOne = document.querySelector('.day')
+    // console.log(dayOne);
+    // console.log(dayOne.parentElement);
+    // console.log(dayOne.nextElementSibling);
+
+    console.log("NODES: ",parent.childNodes);
+    
+        
 </script>
 </html>
